fixed column name overlap

--- a/css.css
+++ b/css.css
@@ -134,14 +134,14 @@ hr {
   color: white;
 }
 
-.column {
+.columnn {
   float: left;
   width: 50%;
   padding: 10px;
   height: 250px;
 }
 
-.column a {
+.columnn a {
   float: none;
   color: black;
   padding: 16px;
@@ -152,7 +152,7 @@ hr {
   font-size: 16px;
 }
 
-.column a:hover {
+.columnn a:hover {
   background-color: #ddd;
 }
 
